# trading-system

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  grid_search.py  main.py  plot_heatmap.py  pyhoncpp.py  pyproject.toml  requirements.txt  sweep_results.csv  trade_log_spy_mom.csv
.github/workflows/: ci.yml  test.yml
configs/: example.yaml
examples/: full_demo.py
quantbt/: cli.py  config.py
quantbt/backtest/: __init__.py  engine.py
quantbt/data/: __init__.py
quantbt/regime/: __init__.py  detector.py
quantbt/reporting/: __init__.py  metrics.py  sweep.py  trades.py
quantbt/risk/: __init__.py  manager.py
quantbt/strategy/: __init__.py  mean_reversion.py  momentum.py  registry.py
quantbt/validation/: __init__.py  walk_forward.py
results/: grid_search_results.csv  trade_log_spy_mom.csv
src/: __init__.py
src/backtest/: __init__.py  curves.py  engine.py  event_engine.py  excursions.py  exposure.py  robustness.py  signal_bridge.py  trades.py  walk_forward_weights.py  weights.py
src/data/: __init__.py  cache.py  calendar.py  corporate_actions.py  csv_loader.py  fracdiff.py  gaps.py  loader.py  panel.py  quality.py  resample.py  returns.py  sessions.py  synthetic.py  universe.py
src/execution/: __init__.py  fills.py  financing.py  impact.py  queue_model.py  schedule.py  slippage.py  spreads.py  tca.py  volume_profile.py
src/indicators/: __init__.py  momentum.py  trend.py  volatility.py  volume.py
src/live/: __init__.py  broker.py
src/oms/: __init__.py  allocation.py  analytics.py  checks.py  corporate.py  fees.py  margin.py  netting.py  order.py  portfolio.py  position.py  rebalance.py
src/portfolio/: __init__.py  analytics.py  black_litterman.py  drift.py  ewma_cov.py  frontier.py  optimizer.py  portfolio.py  shrinkage.py  turnover.py
src/regime/: __init__.py  conditional.py  detector.py  hmm.py  hmm_filter.py  market_states.py  transitions.py  turbulence.py  volatility.py
src/reporting/: __init__.py  attribution.py  benchmark.py  drawdowns.py  html_report.py  league.py  mc_cone.py  metrics.py  periodic.py  plots.py  seasonality.py  sweep.py  tearsheet.py  trades.py
src/risk/: __init__.py  component_var.py  factor_var.py  manager.py  metrics.py  scaling.py  sizing.py  stress.py
src/strategy/: __init__.py  base.py  breakout.py  dual_momentum.py  ema_crossover.py  ensemble.py  half_life.py  hmm_regime.py  kama_trend.py  mean_reversion.py  mfi.py  momentum.py  pairs.py  rsi2.py  squeeze.py  trix.py  tsmom.py  turn_of_month.py
src/validation/: __init__.py  cpcv.py  monte_carlo.py  pbo.py  purged_cv.py  reality_check.py  spa.py  stability.py  stat_tests.py  timing.py  walk_forward.py
tests/: conftest.py  test_adx.py  test_allocation.py  test_attribution.py  test_backtest_trades.py  test_backtest_weights.py  test_benchmark_comparison.py  test_black_litterman.py  test_breakout.py  test_calendar.py  test_capm_metrics.py  test_capture.py  test_cli.py  test_component_var.py  test_config.py  test_connors_rsi.py  test_cornish_fisher.py  test_corporate_actions.py  test_corporate_bookkeeping.py  test_cpcv.py  test_cpcv_paths.py  test_csv_loader.py  test_curves.py  test_data_extras.py  test_drawdowns.py  test_drift.py  test_dual_momentum.py  test_ema_crossover.py  test_engine.py  test_ensemble.py  test_event_engine.py  test_event_engine_tif.py  test_ewma_cov.py  test_excursions.py  test_execution.py  test_execution_cost_units.py  test_execution_impact.py  test_exposure.py  test_factor_var.py  test_fees.py  (+104 more)
