[project]
name = "trading-system"
version = "0.8.0"
description = "Professional-grade systematic trading research platform: vectorised + event-driven backtesting, OMS with cost-basis position tracking, comprehensive technical-indicator library, advanced risk metrics (VaR/CVaR/Omega/Ulcer), seven strategy templates with ensemble combiners, walk-forward + Monte Carlo + Deflated Sharpe validation, multi-asset portfolio optimisation, tear-sheet reporting, paper-broker live adapter, data cache + universe definitions"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "yfinance>=0.2",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.6",
    "pandas-stubs>=2.0",
    "types-seaborn>=0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    # `(str, Enum)` is a deliberate, behaviour-stable pattern here; switching
    # to StrEnum changes str()/format() output in the safety-critical OMS.
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
# Optional no-op lifecycle hooks on the Strategy ABC are intentional, not
# missing @abstractmethod declarations.
"src/strategy/base.py" = ["B027"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["yfinance.*"]
ignore_missing_imports = true
